desktop alignment issue

--- a/app/assets/stylesheets/desktop_styles.sass
+++ b/app/assets/stylesheets/desktop_styles.sass
@@ -46,9 +46,6 @@
       .stop-title
         margin-left: 17px
 
-  .select
-    background-position: calc(100% - 15px) calc(15px + 2px), calc(100% - 10px) calc(15px + 2px), calc(100% - 30px) 10px
-
   #bookings-choose_pickup_location, #bookings-choose_dropoff_location
     .single-landmark
       padding: 13px
